<resources>
    <string name="app_name" translatable="false">To-do</string>
    <string name="button">button</string>
    <string name="my_day">My Day</string>
    <string name="planned">Planned</string>
    <string name="new_to_do">New Task</string>
    <string name="new_list">New List</string>
    <string name="list_name">List Name</string>
    <string name="save">Save</string>
    <string name="untitled">Untitled</string>
    <string name="custom">Custom</string>
    <string name="pick">(pick)</string>
    <string name="dueDate">Due Date</string>
    <string name="selectDate">Select Date</string>
    <string name="task_name">Task Name</string>
    <string name="list">List (optional)</string>
    <string name="badDate">You cannot set dates previous to the current date.</string>
    <string name="listNameEmpty">The list name cannot be empty.</string>
    <string name="newTodoMissingData">The task name and the due date are mandatory.</string>
    <string name="clear">Clear</string>
    <string name="clearList">Clear Task List</string>
    <string name="delete">Delete</string>
    <string name="deleteTaskDialogTitle">Delete Task</string>
    <string name="deleteTaskDialogDescription">Are you sure? This cannot be undone.</string>
    <string name="reminder">Reminder (optional)</string>
    <string name="selectReminder">Add Reminder</string>
    <string name="listAlreadyExists">A list with this name already exists.</string>
    <string name="deleteTaskListDialogTitle">Delete Task List</string>
    <string name="notesLabel">Type some notes (optional)...</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_list">Edit List</string>
    <string name="taskReminder">Task Reminder</string>
</resources>