<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_graph"
    app:startDestination="@id/taskListListFragment">

    <fragment
        android:id="@+id/taskListListFragment"
        android:name="com.example.pdm_tg.ui.tasklistlist.TaskListListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_task_list_list">
        <action
            android:id="@+id/action_taskListListFragment_to_newTodoFragment"
            app:destination="@id/newTodoFragment" />
        <action
            android:id="@+id/action_taskListListFragment_to_newListFragment"
            app:destination="@id/newListFragment" />
        <action
            android:id="@+id/action_taskListListFragment_to_taskListFragment"
            app:destination="@id/taskListFragment" />
    </fragment>

    <fragment
        android:id="@+id/newTodoFragment"
        android:name="com.example.pdm_tg.ui.todos.NewTodoFragment"
        android:label="@string/new_to_do" />

    <fragment
        android:id="@+id/newListFragment"
        android:name="com.example.pdm_tg.ui.newlist.NewListFragment"
        android:label="@string/new_list" />

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.example.pdm_tg.ui.tasklist.TaskListFragment"
        android:label="">

        <argument
            android:name="listName"
            android:defaultValue="Untitled"
            app:argType="string" />

        <argument
            android:name="listId"
            android:defaultValue="-1L"
            app:argType="long" />

        <argument
            android:name="type"
            android:defaultValue="CUSTOM"
            app:argType="com.example.pdm_tg.ui.tasklistlist.TaskListListFragment$ListType" />
        <action
            android:id="@+id/action_taskListFragment_to_taskFragment"
            app:destination="@id/taskFragment" />

    </fragment>
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.pdm_tg.ui.task.TaskFragment"
        android:label="TaskFragment">

        <argument
            android:name="taskId"
            android:defaultValue="-1L"
            app:argType="long" />

    </fragment>
</navigation>