<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.tasklistlist.TaskListListFragment">

    <LinearLayout
        android:id="@+id/defaultLists"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="7.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/homeButtonHeight"
            android:padding="@dimen/default_padding"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/buttonImageMyDay"
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:contentDescription="@string/button"
                android:src="@drawable/day"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buttonTextMyDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:textSize="@dimen/mainTextSize"
                android:text="@string/my_day"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonImageMyDay"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/planned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/homeButtonHeight"
            android:padding="@dimen/default_padding"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/buttonImagePlanned"
                android:layout_width="@dimen/home_icon_size"
                android:layout_height="@dimen/home_icon_size"
                android:contentDescription="@string/button"
                android:src="@drawable/planned"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buttonTextPlanned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:textSize="@dimen/mainTextSize"
                android:text="@string/planned"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonImagePlanned"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <View
        android:id="@+id/separator"
        app:layout_constraintTop_toBottomOf="@id/defaultLists"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:layout_height="@dimen/default_height"
        android:background="@color/light_gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newList"
        app:icon="@drawable/add"
        android:text="@string/new_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_margin="@dimen/default_margin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <!-- TODO: Se houver tempo, fazer FAB animado com 2 botões assim -->
    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newList"
        android:layout_width="@dimen/mini_fab_size"
        android:layout_height="@dimen/mini_fab_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/mini_fab_margin"
        android:contentDescription="@string/new_list"
        app:layout_constraintBottom_toTopOf="@id/newTodo"
        app:layout_constraintEnd_toEndOf="@+id/newTodo"
        app:layout_constraintStart_toStartOf="@+id/newTodo"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newTodo"
        android:layout_width="@dimen/mini_fab_size"
        android:layout_height="@dimen/mini_fab_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/mini_fab_margin"
        android:contentDescription="@string/new_to_do"
        app:layout_constraintBottom_toTopOf="@id/newTodoOrList"
        app:layout_constraintEnd_toEndOf="@+id/newTodoOrList"
        app:layout_constraintStart_toStartOf="@+id/newTodoOrList"
        app:srcCompat="@android:drawable/ic_dialog_map" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="AAAAA"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newTodoOrList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/todo_list"
        android:contentDescription="@string/new_to_do" />

</androidx.constraintlayout.widget.ConstraintLayout>